add_subdirectory(comm)
add_subdirectory(comm/lists)
add_subdirectory(cull)
add_subdirectory(evc)
add_subdirectory(evm)
add_subdirectory(gdi)
add_subdirectory(ijs)
add_subdirectory(japi)
add_subdirectory(juti)
add_subdirectory(mir)
add_subdirectory(sched)
add_subdirectory(sgeobj)
add_subdirectory(spool)
add_subdirectory(uti)
add_subdirectory(uti2)
