add_custom_command(
	OUTPUT qmon_diares.c
	COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/qmon_diares.c.LINUXAMD64 qmon_diares.c
)
add_executable(qmon
	AskForItems.c
	AskForTime.c
	qmon_about.c
	qmon_appres.c
	qmon_ar.c
	qmon_arcustom.c
	qmon_arsub.c
	qmon_browser.c
	qmon_calendar.c
	qmon_ckpt.c
	qmon_cluster.c
	qmon_comm.c
	qmon_cplx.c
	qmon_cq.c
	qmon_diares.c
	qmon_file.c
	qmon_fticket.c
	qmon_host.c
	qmon_init.c
	qmon_job.c
	qmon_jobcustom.c
	qmon_load.c
	qmon_main.c
	qmon_manop.c
	qmon_matrix.c
	qmon_menus.c
	qmon_message.c
	qmon_pe.c
	qmon_preferences.c
	qmon_project.c
	qmon_qaction.c
	qmon_qcustom.c
	qmon_quarks.c
	qmon_request.c
	qmon_resource_quota.c
	qmon_sconf.c
	qmon_share.c
	qmon_signal.c
	qmon_start.c
	qmon_submit.c
	qmon_ticket.c
	qmon_timer.c
	qmon_util.c
	qmon_widgets.c
)
target_compile_definitions(qmon PRIVATE
	XMT_HAS_STRERROR
)
target_include_directories(qmon PRIVATE
	../../3rdparty/qmon/Xbae
	../../3rdparty/qmon/Xmt310
	../../3rdparty/qmon/iconlist
	../../3rdparty/qmon/ltree
	../../3rdparty/qmon/spinbox
	../../3rdparty/qmon/tab
	../../common
	../../daemons/common
	../../daemons/qmaster
	../../libs
	../../libs/cull
	../../libs/sgeobj
	../../libs/uti
	../common
)
target_link_libraries(qmon PRIVATE
	ICE
	SM
	X11
	Xbae
	Xext
	Xicon
	Xltree
	Xm
	Xmt
	Xt
	Xspin
	Xtab
	spool
	spoolc
	sched
	evc
	gdi
	sgeobj
	sgeobjd
	cull
	comm
	commlists
	uti
	parse_job_cull
	unparse_job_cull
	parse_qsub
	read_defaults
	write_job_defaults
	sge_options
	usage
	sge_centry_qconf
	sge_hgroup_qconf
	sge_cqueue_qconf
	sge_mt_init
	sge_cqueue_qstat
	sge_qstat
	sge_qrsub
	sge_resource_quota_qconf
)
