add_executable(sge_qmaster
	configuration_qmaster.c
	job_exit.c
	job_report_qmaster.c
	qmaster_to_execd.c
	reschedule.c
	sched_conf_qmaster.c
	setup_qmaster.c
	sge_advance_reservation_qmaster.c
	sge_c_gdi.c
	sge_c_report.c
	sge_calendar_qmaster.c
	sge_centry_qmaster.c
	sge_ckpt_qmaster.c
	sge_cqueue_qmaster.c
	sge_cuser_qmaster.c
	sge_follow.c
	sge_give_jobs.c
	sge_hgroup_qmaster.c
	sge_host_qmaster.c
	sge_job_enforce_limit.c
	sge_job_qmaster.c
	sge_job_verify.c
	sge_manop_qmaster.c
	sge_pe_qmaster.c
	sge_persistence_qmaster.c
	sge_qinstance_qmaster.c
	sge_qmaster_heartbeat.c
	sge_qmaster_main.c
	sge_qmaster_process_message.c
	sge_qmaster_threads.c
	sge_qmaster_timed_event.c
	sge_qmod_qmaster.c
	sge_reporting_qmaster.c
	sge_resource_quota_qmaster.c
	sge_rusage.c
	sge_sched_job_category.c
	sge_sched_order.c
	sge_sched_prepare_data.c
	sge_sched_process_events.c
	sge_sched_thread.c
	sge_sharetree_qmaster.c
	sge_subordinate_qmaster.c
	sge_task_depend.c
	sge_thread_event_master.c
	sge_thread_jvm.c
	sge_thread_listener.c
	sge_thread_main.c
	sge_thread_scheduler.c
	sge_thread_signaler.c
	sge_thread_test.c
	sge_thread_timer.c
	sge_thread_worker.c
	sge_userprj_qmaster.c
	sge_userset_qmaster.c
	sge_utility_qmaster.c
)
target_include_directories(sge_qmaster PRIVATE
	${CMAKE_CURRENT_LIST_DIR}
	../../common
	../../libs
	../../libs/cull
	../../libs/evm
	../../libs/gdi
	../../libs/sgeobj
	../../libs/uti
	../common
	../execd
)
target_link_libraries(sge_qmaster PRIVATE
	admin_mail
	category
	comm
	commlists
	cull
	evc
	evm
	execution_states
	gdi
	lock
	mail
	mir
	qmaster_heartbeat
	sched
	sge_mt_init
	sge_options
	sgeobj
	sgeobjd
	shutdown
	sig_handlers
	spool
	spoold
	spoolloader
	startprog
	unparse_job_cull
	usage
	uti
)
